syntax = "proto3";
import "google/protobuf/any.proto";

package v1;

option go_package = "proto/authentication/v1";

message ValidateUserRequest {
  string token = 1;
  int32 profileID = 2;
  bool isProfileValidate = 3;
}

message ValidateUserReply {
  google.protobuf.Any data  = 1;
  int32 status = 2;
  string message = 3;
}

message CreateJWTTokenRequest {
  int32 accountID = 1;
}

message CreateJWTTokenReply {
  string token = 1;
  int32 status = 2;
}

service AuthService {
    rpc ValidateUser(ValidateUserRequest) returns (ValidateUserReply) {}
    rpc CreateJWTToken(CreateJWTTokenRequest) returns (CreateJWTTokenReply) {}
}
